# hse-project-BigFloat

./: BigFloat.cpp  BigFloat.h  CMakeLists.txt  main.cpp
BigFloatLibrary/: BigFloat.cpp  BigFloat.h
src/: main.cpp
tests/: test.cpp
